# inscriptions

./: .env.example  .gitignore  README.md  city_counts.csv  environment.yml  error_rows  inscriptions-spa.ipynb  pyproject.toml  records_with_negative_date_range  requirements.txt  runtime.txt  temp-work.ipynb
archive/errors-2026-04-22/: city_province_error_rows.csv  not_after_error_rows.csv
bayesian-inference-data/: log_urban_context_pop_est_vs_city_inscription_count.pt  log_urban_context_pop_est_vs_city_letter_count.pt  log_urban_context_pop_est_vs_log_city_inscription_count.pt  log_urban_context_pop_est_vs_log_city_letter_count.pt
bootstrap-samples/: bootstrap_samples_SE_daterange_mean_100.npy  bootstrap_samples_SE_daterange_mean_1000.npy  bootstrap_samples_SE_daterange_mean_2000.npy  bootstrap_samples_SE_daterange_mean_25.npy  bootstrap_samples_SE_daterange_mean_250.npy  bootstrap_samples_SE_daterange_mean_50.npy  bootstrap_samples_SE_daterange_mean_500.npy
bootstrap-samples/provinces/: SPA_240_Achaia.npy  (+43 more)
data/: city_aggregated.csv  province_aggregated.csv
planning/: ai-contributions.md  archive-2024-summary.md  backlog-2026-04-22.md  backlog-2026-05-03.md  baorista-install-plan.md  bibliography-2026-04-22.md  bibliography-aeneas-2026-04-23.md  cc-briefing-2026-04-22.md  decision-log.md  future-studies.md  inscriptions-aeneas.bib  inscriptions-spa.bib  preregistration-amendments-2026-04-25.md  preregistration-draft.md  prior-art-scout-2026-04-25-aoristic-envelope.md  research-intent.md
scripts/: h3a_brms_shadow.R  zotero_batch_add.py  zotero_followup.py
(+809 files in other folders)
