[project]
name = "inscriptions"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.5.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "pyzotero>=1.11.1",
    "requests>=2.33.1",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
